# usense

./: .gitignore  Aquaria  Makefile  Makefile.am  README  autoconf.sh  configure.ac  gotemp.c
examples/: config  schedule
src/: Makefile.am  PCsensor_Temper.c  TEMPer.c  aquaria.c  ch341.c  ch341.h  gotemp.c  i2c-algo-bit.c  i2c.h  main.c  units.h  usense.c  usense.h
